# wormaudio

./: .clang-format  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  juce_test.jucer  xmake.lua
player/: CMakeLists.txt  compile_java.sh
player/src/: Runtime.cpp  Runtime.hpp
player/src/api/: MessageThreadManager.cpp  MessageThreadManager.hpp
player/src/asset/: AssetManager.hpp
player/src/automation/: Automation.cpp  Automation.hpp  AutomationInstance.hpp  AutomationRegistry.cpp  AutomationRegistry.hpp  AutomationTable.cpp  AutomationTable.hpp  Mapping.hpp  Property.cpp  Property.hpp  PropertyProvider.cpp  PropertyProvider.hpp  automation.hpp
player/src/control/: ConditionList.ixx  Parameter.cpp  Parameter.ixx  ParameterLookup.cpp  ParameterLookup.ixx  StateMachineDefinition.cpp  StateMachineDefinition.hpp  StateMachineDefinition.ixx  TransitionTable.ixx  control.ixx
player/src/editor/: Editor.hpp
player/src/event/: AutomationTableInstance.cpp  AutomationTableInstance.hpp  ElementHandle.hpp  ElementList.cpp  ElementList.hpp  Event.cpp  Event.hpp  Event.ixx  EventDef.cpp  EventDef.fwd.hpp  EventDef.hpp  EventElementInstancer.cpp  EventElementInstancer.hpp  EventInstance.cpp  EventInstance.hpp  EventInstance.ixx  EventProperties.cpp  EventProperties.hpp  LogicTickInfo.cpp  LogicTickInfo.hpp  ParameterList.cpp  ParameterList.hpp  StateMachineInstance.cpp  StateMachineInstance.hpp  StateMachineInstance.ixx  StateManager.ixx  event_m.ixx
player/src/graph/: State.cpp  State.ixx  StateDef.cpp  StateDef.hpp  StateDef.ixx
player/src/instance/: ListenerInstance.hpp  instance.hpp  spatial.cpp  spatial.hpp
player/src/player/: ElementInstanceManager.cpp  ElementInstanceManager.hpp  ElementInstanceManager.ixx  LeanSamplePlayer.cpp  LeanSamplePlayer.hpp  LeanSamplePlayer.ixx  SamplePlayer1.hpp  SamplePlayer1.ixx  Track.hpp  Track.ixx  transport.cpp  transport.hpp  transport.ixx
player/src/resource/: Asset.cpp  Asset.fwd.hpp  Asset.hpp  AssetLoader.cpp  AssetLoader.hpp  ChoiceElement.cpp  ChoiceElement.hpp  ClipElement.cpp  ClipElement.hpp  Element.hpp  Element.ixx  ElementInstance.hpp  ElementInstance.ixx  ElementInstanceContext.hpp  ElementInstanceContext.ixx  ElementSampleBuffer.cpp  ElementSampleBuffer.hpp  ElementSampleBuffer.ixx  ElementTypes.ixx  Project.cpp  Project.hpp  Resource.cpp  Resource.fwd.hpp  Resource.hpp  Resource.ixx  ResourceLoader.cpp  ResourceLoader.hpp  ResourceLoader.ixx  SharedResource.cpp  SharedResource.hpp  register_element_poly.hpp  serialization.cpp  serialization.hpp
player/src/runtime/: AudioEntryPoint.cpp  AudioEntryPoint.hpp  LogicTicker.cpp  LogicTicker.hpp  Runtime.cpp  Runtime.fwd.hpp  Runtime.hpp
player/src/serialization/: cereal_poly_archives.hpp  value.hpp
player/src/signal/: Listener.hpp  ListenerBase.hpp  SharedSignal.hpp  Signal.cpp  Signal.hpp  UniqueSignal.hpp
player/src/state/: ConditionList.cpp  ConditionList.fwd.hpp  ConditionList.hpp  ConditionList.ixx  EventParameterLookup.cpp  EventParameterLookup.hpp  GlobalParameterLookup.cpp  GlobalParameterLookup.hpp  Parameter.cpp  Parameter.hpp  Parameter.ixx  ParameterLookup.cpp  ParameterLookup.hpp  ParameterLookup.ixx  StateMachineDefinition.cpp  StateMachineDefinition.hpp  control.ixx
player/src/util/: AudioContext.hpp  AudioContext.ixx  Data.hpp  Time.hpp  WrappedValue.hpp  class_util.h  io.hpp  io.ixx  serialization.hpp  serialization_util.hpp  util.ixx
player/swig/: CMakeLists.txt  Nullable.hpp  bindings.cpp  bindings.h  bindings.i  exec_test.cpp  instance.i  juce.i  logger.i  main.i  optional.i  optional2.i  player.i  runtime.b.cpp  runtime.b.hpp  runtime.i  util.i
player/swig/event/: event_bindings.hpp
player/swig/java/: CMakeLists.txt  java_alloc.hpp  java_optional.i  logger.b.cpp  message.b.cpp  nullable_java.i  test_exec.cpp
wormaudio/: CMakeLists.txt  compile_java.sh
wormaudio-editor/: CMakeLists.txt  juce_test.jucer
wormaudio-editor/data/: CMakeLists.txt
wormaudio-editor/src/: Main.cpp  SubComponentTest.fwd.h  SubComponentTest.h  UiMainComponent.cpp  UiMainComponent.hpp  Version.hpp
wormaudio-editor/src/browser/: EntryListPanel.cpp  EntryListPanel.hpp  FileBrowserPanel.cpp  FileBrowserPanel.hpp  FileDragSource.hpp  FileListPanel.cpp  FileListPanel.hpp
wormaudio-editor/src/canvas/: BottomInspectorPanel.hpp  CanvasConnectionManager.cpp  CanvasConnectionManager.hpp  CanvasSelectionManager.hpp  CanvasViewport.cpp  CanvasViewport.hpp  CentrePanel.cpp  CentrePanel.hpp  InspectorSelectionManager.hpp  StateCanvasPanel.cpp  StateCanvasPanel.hpp  StateNodeWidget.cpp  StateNodeWidget.fwd.hpp  StateNodeWidget.hpp  TransitionArrowComponent.cpp  TransitionArrowComponent.hpp
wormaudio-editor/src/command/: Commands.cpp  Commands.hpp  SimpleCommandTarget.hpp
wormaudio-editor/src/dialogue/: ProjectSettingsDialogue.cpp  ProjectSettingsDialogue.hpp
wormaudio-editor/src/editor/: Editor.cpp  Editor.fwd.hpp  Editor.hpp  EditorEventInstance.cpp  EditorEventInstance.hpp  EditorParameterList.cpp  EditorParameterList.hpp  EditorState.cpp  EditorState.hpp  ProjectSaveManager.cpp  ProjectSaveManager.hpp  ToastManager.cpp  ToastManager.hpp
wormaudio-editor/src/inspector/: InspectorRoot.cpp  InspectorRoot.hpp  RightInspectorPanel.cpp  RightInspectorPanel.hpp
wormaudio-editor/src/menu/: MainMenuModel.cpp  MainMenuModel.hpp
wormaudio-editor/src/outline/: OutlineItemComponent.cpp  (+5 more)
wormaudio-godot/: .gitignore  CMakeLists.txt
wormaudio-godot/bootstrap_demo/: bootstrap.cpp
wormaudio-godot/cmake/: CompilerWarnings.cmake  GitVersionInfo.cmake
wormaudio-godot/project/: icon.svg.import  project.godot  test.tscn  test_system.tres
wormaudio-godot/src/: CMakeLists.txt  Example.cpp  Example.hpp  GDExtensionTemplate.cpp  RegisterExtension.cpp  WARuntime.cpp  WARuntime.hpp  WormAudioGodot.cpp  WormAudioGodot.hpp
wormaudio-godot/templates/: template.debug.gdextension.in
wormaudio/swig/: Nullable.hpp  bindings.cpp  bindings.h  instance.i  juce.i  logger.b.hpp  logger.i  main.i  player.i  runtime.b.cpp  runtime.b.hpp  runtime.i  util.i
(+528 files in other folders)
